Prevent table tree menu overflowing screen

--- a/src/scss/TaxonomyTable.scss
+++ b/src/scss/TaxonomyTable.scss
@@ -102,6 +102,11 @@
       border-radius: 4px;
       z-index: 1;
 
+      &--invert {
+        top: auto;
+        bottom: 0;
+      }
+
       &__item-group {
         &:not(:last-of-type) {
           border-bottom: 1px solid $color-text-light-grey;
